Categorias terminadas y creando upload de imagenes

--- a/index.html
+++ b/index.html
@@ -59,13 +59,17 @@
 		<script src="public/js/appDkings.js" type="text/javascript"></script>
 
 		<!-- Controllers -->
+		<script src="public/js/controllers/login.controller.js" type="text/javascript"></script>
+		<script src="public/js/controllers/categorias.controller.js" type="text/javascript"></script>
+		<script src="public/js/controllers/productos.controller.js" type="text/javascript"></script>
+
+		<!-- Services -->
 		<script src="public/js/services/files.service.js" type="text/javascript"></script>
 		<script src="public/js/services/sha1.factory.js" type="text/javascript"></script>
 		<script src="public/js/services/login.service.js" type="text/javascript"></script>
 		<script src="public/js/services/route.service.js" type="text/javascript"></script>
-
-		<!-- Services -->
-		<script src="public/js/controllers/login.controller.js" type="text/javascript"></script>
+		<script src="public/js/services/galeria.service.js" type="text/javascript"></script>
+		<script src="public/js/services/productos.service.js" type="text/javascript"></script>
 
 		<script src="js/bootstrap.min.js"></script>
 	    <script src="js/jquery.prettyPhoto.js"></script>
