--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 		<script src='bower_components/photobox/photobox/jquery.photobox.js'></script>
 		<!--Import Trianglify.min.js-->
     	<script src="bower_components/trianglify/dist/trianglify.min.js"></script>
+    	<!-- Import Bootstrap swetalert-->
     	<script src="bower_components/bootstrap-sweetalert/lib/sweet-alert.min.js"></script>
+    	<!-- Import Bootstrap input-File Stile -->
+    	<script src="bower_components/bootstrap-filestyle/src/bootstrap-filestyle.min.js"></script>
 
 		<!-- App -->
 		<script src="public/js/appDkings.js" type="text/javascript"></script>
@@ -70,6 +73,9 @@
 		<script src="public/js/services/route.service.js" type="text/javascript"></script>
 		<script src="public/js/services/galeria.service.js" type="text/javascript"></script>
 		<script src="public/js/services/productos.service.js" type="text/javascript"></script>
+
+		<!-- Directives -->
+		<script src="public/js/directives/files.directive.js" type="text/javascript"></script>		
 
 		<script src="js/bootstrap.min.js"></script>
 	    <script src="js/jquery.prettyPhoto.js"></script>
