Modulo administrativo de imagenes en altas y mostrar terminado, solo falta editar

--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
 		<script src="public/js/directives/files.directive.js" type="text/javascript"></script>		
 
 		<script src="js/bootstrap.min.js"></script>
-	    <script src="js/jquery.prettyPhoto.js"></script>
-	    <script src="js/jquery.isotope.min.js"></script>
-	    <script src="js/main.js"></script>
+	    <!--<script src="js/jquery.isotope.min.js"></script>
+	    <script src="js/main.js"></script>-->
 	    <script src="js/wow.min.js"></script>
 	</body>
 </html>
